. [NEW] ParticleTest: added test case for issue #893, free non-moving particles in retina mode would still move
. [FIX] CCAnimation: bug in addFrames that resulted in incorrect delayPerUnit (issue #1341), added assert to prevent 0 duration.
. [FIX] CCAnimate: fixed low FPS bug, where multiple frames need to be set per 'tick'.
. [FIX] CCDirector: exceptions raised in runloop didn't cause program to abort (issue #911)
. [FIX] CCNode: onEnterTransitionDidFinish isn't called twice anymore, when node was added in onEnter
. [FIX] CCSprite: CCSprite bug in setDisplayFrameWithAnimationName
. [FIX] CCParticleSystem: unschedule update method when deallocated
. [FIX] CCParticleSystem: incorrect position of free and relative particles when emitter is scaled (issue #1352)
. [FIX] CCParticleSystemQuad: Changed animation property to particleAnimation, for compiler warning
. [FIX] CCRenderTexture: fixed new getUIImageFromBuffer implementation
. [FIX] CCTouchDispatcher: fixed crash after showing UIAlertView (issue #1279)
. [FIX] CCGrabber: added log message to warn that grabber doesn't support transparent parts with a color buffer of RGB565
. [FIX] Compiler: fixed unrecognised clang pragmas so cocos can still be compiled with LLVM version < 2.0. 
. [FIX-MAC] CCDirectorMac: convertToLogicalCoordinates compensates for viewport offset when a custom projection is set 

version 1.1-beta2b 14-Mar-2012
. [FIX] CCUtils: missing method declaration

version 1.1-beta2 12-Mar-2012
. [NEW] v2.0 forward ported changes:
			LabelBMFont: added setFntFile method
			Animation: Added new animation format that supports delays per frame and notifications per frame
			Actions: Added ActionTargeted action. Useful to target other nodes from a sequence.
. [NEW] All: Code is compatible with ARC (issue #1199) 
. [NEW] CCArray: new sorting methods, replaceObjectAtIndex, isEqualToArray
. [NEW] ccFileUtiles: new iPad retina file extension (ipadhd)