@@ -68,5 +68,12 @@
 	return [[self class] actionWithDuration:duration_ key:key_ from:to_ to:from_];
 }
 
+//issue 1160 no copy method for tween
+-(id) copyWithZone: (NSZone*) zone
+{
+	CCActionTween *copy = [[[self class] allocWithZone: zone] initWithDuration:duration_ key:[key_ copy] from:from_ to:to_];
+    
+	return copy;
+}
 
 @end
