@@ -9,6 +9,7 @@ version 1.1-rc0 ..-..-2012
 . [NEW] ParticleTest: added test case for issue #893, free non-moving particles in retina mode would still move
 . [FIX] CCAnimation: bug in addFrames that resulted in incorrect delayPerUnit (issue #1341), added assert to prevent 0 duration.
 . [FIX] CCAnimate: fixed low FPS bug, where multiple frames need to be set per 'tick'.
+. [FIX] CCActionTween: fixed missing copyWithZone
 . [FIX] CCDirector: exceptions raised in runloop didn't cause program to abort (issue #911)
 . [FIX] CCNode: onEnterTransitionDidFinish isn't called twice anymore, when node was added in onEnter
 . [FIX] CCSprite: CCSprite bug in setDisplayFrameWithAnimationName
